# ternary-intelligence-stack--tis-

./: .dockerignore  CITATION.cff  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Home.md  LICENSING.md  MAINTAINERS.md  QUICKSTART.md  README.md  SECURITY.md  fly.toml.tmp
ternlang-audit/: Cargo.toml  README.md
ternlang-audit/src/: main.rs
ternlang-root/: .gitattributes  BET-ISA-SPEC.md  CODEOWNERS  Cargo.toml  Dockerfile  GEMINI_MISSION.md  GEMINI_TERN_BRIEF.md  LICENSE  LICENSE-BSL  LICENSE-ML-TRAINING  README.md  ROADMAP.md  TERNARY-ECOSYSTEM.md  fly.toml  ternlang.toml  test_tensor.tern
ternlang-root/examples/: 141_space_mission_planning.tern  142_autonomous_ship_routing.tern  143_insurance_actuarial.tern  144_pandemic_tracing.tern  145_carbon_verification.tern  146_water_treatment.tern  147_warehouse_robot.tern  148_clinical_genomics.tern  149_satellite_collision.tern  150_recidivism_risk.tern  151_earthquake_warning.tern  152_autonomous_submarine.tern  153_supply_chain.tern  154_nuclear_sub_reactor.tern  155_wildfire_evacuation.tern  156_hospital_bed.tern  157_bridge_toll.tern  158_food_recall.tern  159_vaccine_cold_chain.tern  160_deepfake_detection.tern  161_satellite_uplink.tern  162_social_media_suspension.tern  163_employee_review.tern  164_tax_fraud.tern  165_drug_interdiction.tern  166_piracy_alert.tern  167_avalanche_risk.tern  168_tornado_intercept.tern  169_black_hole_scheduling.tern  170_cern_beam_abort.tern  171_quantum_processor_stability.tern  172_cyber_physical_system_integrity.tern  173_biodiversity_monitoring.tern  174_microgrid_fault_detection.tern  175_space_debris_tracking.tern  176_geothermal_energy_extraction.tern  177_precision_agriculture_spraying.tern  178_smart_city_traffic_flow.tern  179_industrial_robot_safety.tern  180_waste_sorting_automation.tern  (+95 more)
ternlang-root/examples/tutorials/: 01_what_is_a_trit.tern  02_consensus_explained.tern  03_invert_and_negate.tern  04_hard_gate_pattern.tern  05_hold_as_routing.tern  06_cascading_consensus.tern  07_density_check.tern  08_confidence_threshold.tern  09_bitnet_intuition.tern  10_moe_routing.tern  11_triad_field.tern  12_deliberation_loop.tern  13_safety_veto.tern  14_evidence_aggregation.tern  15_epistemic_humility.tern  16_binary_vs_ternary.tern  17_real_world_hold.tern  18_ternary_voting.tern  19_chained_decisions.tern  20_building_an_agent.tern  INDEX.md
ternlang-root/linguist/: LINGUIST_PR.md  generate_samples.py  grammar.js  languages.yml
ternlang-root/spec/: grammar.ebnf  ternlang-dictionary-v0.1.json  ternlang-language-reference-v0.1.md
ternlang-root/stdlib/agents/: coordinator.tern  debate.tern  memory.tern  planner.tern  reflection.tern  tool_use.tern
ternlang-root/stdlib/apps/: anomaly_detector.tern  classifier.tern  multi_agent_consensus.tern  sentiment_engine.tern  sparse_inference_engine.tern  ternary_qa.tern  ternary_rl_agent.tern
ternlang-root/stdlib/benchmarks/: agent_throughput.tern  deliberation_speed.tern  encoding_efficiency.tern  sparse_matmul.tern
ternlang-root/stdlib/bio/: codon_map.tern  gene_regulation.tern  mutation_track.tern  phylogeny.tern  sequence_align.tern
ternlang-root/stdlib/classical/: cross_validation.tern  dbscan.tern  decision_tree.tern  feature_selection.tern  gradient_boosting.tern  kmeans.tern  knn.tern  linear_regression.tern  logistic_regression.tern  metrics.tern  naive_bayes.tern  pca.tern  preprocessing.tern  random_forest.tern  svm.tern
ternlang-root/stdlib/crypto/: merkle_trit.tern  stream_cipher.tern  ternary_hash.tern
ternlang-root/stdlib/data/: batching.tern  drift_detect.tern  feature_store.tern  imputation.tern  normalization.tern  outlier_detect.tern  schema.tern  splitting.tern
ternlang-root/stdlib/distributed/: data_parallel.tern  federated.tern  gossip.tern  model_parallel.tern
ternlang-root/stdlib/ensemble/: bagging.tern  boosting.tern  snapshot_ensemble.tern  stacking.tern  voting.tern
ternlang-root/stdlib/eval/: calibration_curve.tern  classification_metrics.tern  confusion_matrix.tern  nlp_metrics.tern  pr_curve.tern  ranking_metrics.tern  regression_metrics.tern  roc_curve.tern
ternlang-root/stdlib/finance/: arbitrage.tern  momentum.tern  moving_average.tern  order_book.tern  risk_metrics.tern
ternlang-root/stdlib/gametheory/: auction.tern  nash_eq.tern  prisoners_dilemma.tern  voting_power.tern
ternlang-root/stdlib/graph/: community.tern  gnn_layer.tern  graph_algorithms.tern  graph_attention.tern  graph_core.tern  graph_sage.tern  knowledge_graph.tern  pagerank.tern
ternlang-root/stdlib/hardware/: alu_trit.tern  flipflop_trit.tern  memory_bus.tern  mux_trit.tern  register_file.tern
ternlang-root/stdlib/integrations/: curl_examples.tern  mcp_tool_use.tern  python_bridge.tern
ternlang-root/stdlib/ml/: quantize.tern
ternlang-root/stdlib/models/: bert_analog.tern  cnn.tern  diffusion_analog.tern  gan_analog.tern  gpt_analog.tern  mlp.tern  resnet_analog.tern  rnn.tern  seq2seq.tern  vae_analog.tern
ternlang-root/stdlib/nlp/: beam_search.tern  embeddings.tern  ner.tern  positional.tern  sentiment.tern  summarizer.tern  text_classifier.tern  tokenizer.tern  translation_gate.tern  vocab.tern
ternlang-root/stdlib/nn/: activation.tern  batch_norm.tern  conv1d.tern  conv2d.tern  dense.tern  dropout.tern  gru_cell.tern  (+8 more)
ternlang-root/ternlang-api/: Cargo.toml
ternlang-root/ternlang-cli/: Cargo.toml
ternlang-root/ternlang-compat/: Cargo.toml
ternlang-root/ternlang-core/: Cargo.toml
ternlang-root/ternlang-hdl/: Cargo.toml  LICENSE
ternlang-root/ternlang-lsp/: Cargo.toml
ternlang-root/ternlang-mcp/: Cargo.toml  mcp-config.json  smithery.yaml
ternlang-root/ternlang-ml/: Cargo.toml
ternlang-root/ternlang-moe/: Cargo.toml
ternlang-root/ternlang-runtime/: Cargo.toml
ternlang-root/ternlang-translator/: Cargo.toml
ternlang-root/ternlang-web/: CNAME  index.html  pricing.html  sitemap.xml
ternlang-root/whitepaper/: BUILD.md  build_docx.py  ternlang-whitepaper.docx  ternlang-whitepaper.tex
ternlang-root/wiki/: Home.md  Language-Reference.md  MCP-Integration-Guide.md  Scalar-Temperature.md
(+258 files in other folders)
