[package]
name = "ternlang-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

