[workspace]
members = [
    "ternlang-core",
    "ternlang-codegen",
    "ternlang-ml",
    "ternlang-cli",
    "ternlang-test", "ternlang-mcp", "ternlang-runtime", "ternlang-hdl", "ternlang-lsp", "ternpkg", "ternlang-compat",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2024"
license     = "LGPL-3.0"
repository  = "https://github.com/eriirfos-eng/ternary-intelligence-stack--tis-"
homepage    = "https://github.com/eriirfos-eng/ternary-intelligence-stack--tis-"
authors     = ["RFI-IRFOS <simeon@rfi-irfos.com>"]
keywords    = ["ternary", "trit", "balanced-ternary", "vm", "compiler"]
categories  = ["compilers", "science"]
