[workspace]
members = [
    "ternlang-core",
    "ternlang-codegen",
    "ternlang-ml",
    "ternlang-cli",
    "ternlang-api",
    "ternlang-test", "ternlang-mcp", "ternlang-runtime", "ternlang-hdl", "ternlang-lsp", "ternpkg", "ternlang-compat",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2024"
license     = "LGPL-3.0-or-later"
repository  = "https://github.com/eriirfos-eng/ternary-intelligence-stack"
homepage    = "https://ternlang.com"
authors     = ["RFI-IRFOS <licensing@ternlang.com>"]
keywords    = ["ternary", "trit", "balanced-ternary", "vm", "compiler"]
categories  = ["compilers", "science"]
