[package]
name        = "ternlang-hdl"
description = "Verilog-2001 codegen for balanced ternary — BET processor primitives, sparse matmul array, FPGA simulation wrapper."
version.workspace   = true
edition.workspace   = true
license          = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[dependencies]
