[package]
name        = "ternlang-lsp"
description = "LSP 3.17 language server for ternlang — hover docs, code completion, and live diagnostics for .tern files."
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[dependencies]
ternlang-core = { path = "../ternlang-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
