[package]
name        = "ternlang-mcp"
description = "MCP server for ternlang — connects any AI agent to balanced ternary decision logic via trit_decide and friends."
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[[bin]]
name = "ternlang-mcp"
path = "src/main.rs"

[dependencies]
ternlang-core = { path = "../ternlang-core" }
ternlang-ml   = { path = "../ternlang-ml" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
