[package]
name        = "ternlang-mcp"
description = "MCP server for ternlang — connects any AI agent to balanced ternary decision logic via trit_decide and friends."
version.workspace   = true
edition.workspace   = true
license          = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[lib]
name = "ternlang_mcp"
path = "src/lib.rs"

[[bin]]
name = "ternlang-mcp"
path = "src/main.rs"

[dependencies]
ternlang-core = { path = "../ternlang-core", version = "0.1.0" }
ternlang-ml   = { path = "../ternlang-ml", version = "0.1.0" }
ternlang-moe  = { path = "../ternlang-moe", version = "0.1.0" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
