[package]
name        = "ternlang-ml"
description = "BitNet-style ternary quantization, sparse matrix multiply kernels, and benchmarking for balanced ternary ML."
version.workspace   = true
edition.workspace   = true
license          = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[dependencies]
ternlang-core = { path = "../ternlang-core" }
rayon = "1"
