[package]
name = "ternlang-moe"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Ternary Mixture-of-Experts orchestrator (MoE-13). Dual-key synergistic routing, 6D competence vectors, 1+1=3 triad synthesis, three-tier memory, introspective hold, 13-agent dual-signal deliberation. DOI: 10.17605/OSF.IO/TZ7DC"

[dependencies]
ternlang-core = { path = "../ternlang-core", version = "0.1.0" }
ternlang-ml   = { path = "../ternlang-ml",   version = "0.1.0" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
