[package]
name        = "ternlang-runtime"
description = "Distributed actor runtime for ternlang — TCP-based TernNode with remote spawn/send/await over newline-JSON protocol."
version.workspace   = true
edition.workspace   = true
license          = "LicenseRef-BSL-1.1"
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[dependencies]
ternlang-core = { path = "../ternlang-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
